@@ -118,12 +118,20 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
+import static io.ballerina.compiler.syntax.tree.SyntaxKind.OBJECT_TYPE_DESC;
+import static io.ballerina.servicemodelgenerator.extension.ServiceModelGeneratorConstants.KIND_MUTATION;
+import static io.ballerina.servicemodelgenerator.extension.ServiceModelGeneratorConstants.KIND_REMOTE;
+import static io.ballerina.servicemodelgenerator.extension.ServiceModelGeneratorConstants.NEW_LINE;
+import static io.ballerina.servicemodelgenerator.extension.ServiceModelGeneratorConstants.NEW_LINE_WITH_TAB;
+import static io.ballerina.servicemodelgenerator.extension.ServiceModelGeneratorConstants.TWO_NEW_LINES;
 import static io.ballerina.servicemodelgenerator.extension.util.ServiceModelUtils.getProtocol;
 import static io.ballerina.servicemodelgenerator.extension.util.ServiceModelUtils.updateFunctionList;
 import static io.ballerina.servicemodelgenerator.extension.util.ServiceModelUtils.updateGenericServiceModel;
 import static io.ballerina.servicemodelgenerator.extension.util.ServiceModelUtils.updateListenerItems;
+import static io.ballerina.servicemodelgenerator.extension.util.Utils.FunctionAddContext.RESOURCE_ADD;
+import static io.ballerina.servicemodelgenerator.extension.util.Utils.FunctionAddContext.TCP_SERVICE_ADD;
+import static io.ballerina.servicemodelgenerator.extension.util.Utils.FunctionBodyKind.DO_BLOCK;
 import static io.ballerina.servicemodelgenerator.extension.util.Utils.addServiceAnnotationTextEdits;
 import static io.ballerina.servicemodelgenerator.extension.util.Utils.expectsTriggerByName;
 import static io.ballerina.servicemodelgenerator.extension.util.Utils.filterTriggers;
@@ -135,10 +143,10 @@ import static io.ballerina.servicemodelgenerator.extension.util.Utils.getPath;
 import static io.ballerina.servicemodelgenerator.extension.util.Utils.getServiceDeclarationNode;
 import static io.ballerina.servicemodelgenerator.extension.util.Utils.importExists;
 import static io.ballerina.servicemodelgenerator.extension.util.Utils.isAiAgentModule;
-import static io.ballerina.servicemodelgenerator.extension.util.Utils.isHttpServiceContractType;
+import static io.ballerina.servicemodelgenerator.extension.util.Utils.getHttpServiceContractSym;
 import static io.ballerina.servicemodelgenerator.extension.util.Utils.populateRequiredFuncsDesignApproachAndServiceType;
 import static io.ballerina.servicemodelgenerator.extension.util.Utils.updateServiceContractModel;
-import static io.ballerina.servicemodelgenerator.extension.util.Utils.updateServiceModel;
+import static io.ballerina.servicemodelgenerator.extension.util.Utils.updateHttpServiceModel;
 
 /**
  * Represents the extended language server service for the trigger model generator service.
@@ -242,17 +250,15 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (document.isEmpty()) {
                     return new CommonSourceResponse();
                 }
-                ModulePartNode node = document.get().syntaxTree().rootNode();
-                LineRange lineRange = node.lineRange();
-
+                ModulePartNode modulePartNode = document.get().syntaxTree().rootNode();
+                LineRange lineRange = modulePartNode.lineRange();
                 Listener listener = request.listener();
-                String listenerDeclaration = listener.getDeclaration();
-                if (!importExists(node, listener.getOrgName(), listener.getModuleName())) {
+                if (!importExists(modulePartNode, listener.getOrgName(), listener.getModuleName())) {
                     String importText = getImportStmt(listener.getOrgName(), listener.getModuleName());
                     edits.add(new TextEdit(Utils.toRange(lineRange.startLine()), importText));
                 }
-                edits.add(new TextEdit(Utils.toRange(lineRange.endLine()),
-                        ServiceModelGeneratorConstants.LINE_SEPARATOR + listenerDeclaration));
+                String listenerDeclaration = listener.getDeclaration();
+                edits.add(new TextEdit(Utils.toRange(lineRange.endLine()), NEW_LINE + listenerDeclaration));
                 return new CommonSourceResponse(Map.of(request.filePath(), edits));
             } catch (Throwable e) {
                 return new CommonSourceResponse(e);
@@ -299,13 +305,9 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 }
 
                 List<ImportDeclarationNode> importsList = node.imports().stream().toList();
-                LinePosition listenerDeclaringLoc;
-                if (!importsList.isEmpty()) {
-                    listenerDeclaringLoc = importsList.get(importsList.size() - 1).lineRange().endLine();
-                } else {
-                    listenerDeclaringLoc = lineRange.endLine();
-                }
-                String listenerDeclarationStmt = ListenerUtil.getListenerDeclarationStmt(
+                LinePosition listenerDeclaringLoc = importsList.isEmpty() ? lineRange.endLine() :
+                        importsList.getLast().lineRange().endLine();
+                String listenerDeclarationStmt = ListenerUtil.getHttpDefaultListenerDeclarationStmt(
                         semanticModel, document.get(), listenerDeclaringLoc);
                 edits.add(new TextEdit(Utils.toRange(listenerDeclaringLoc), listenerDeclarationStmt));
 
@@ -341,8 +343,8 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (document.isEmpty()) {
                     return new ServiceModelResponse();
                 }
-                Set<String> listenersList = ListenerUtil.getCompatibleListeners(
-                        request.moduleName(), semanticModel, project);
+                Set<String> listenersList = ListenerUtil.getCompatibleListeners(request.moduleName(), semanticModel,
+                        project);
                 serviceModel.getListener().setItems(listenersList.stream().toList());
                 return new ServiceModelResponse(serviceModel);
             } catch (Throwable e) {
@@ -361,7 +363,6 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
     public CompletableFuture<CommonSourceResponse> addService(ServiceSourceRequest request) {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                List<TextEdit> edits = new ArrayList<>();
                 Path filePath = Path.of(request.filePath());
                 Project project = this.workspaceManager.loadProject(filePath);
                 Optional<Document> document = this.workspaceManager.document(filePath);
@@ -374,15 +375,11 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 Service service = request.service();
                 populateRequiredFuncsDesignApproachAndServiceType(service);
 
-                boolean isDefaultListenerCreationRequired =
-                        ListenerUtil.checkForDefaultListenerExistence(service.getListener());
-
+                boolean createDefaultListener = ListenerUtil.createDefaultListener(service.getListener());
                 if (Objects.nonNull(service.getOpenAPISpec())) {
-                    Path contractPath = Path.of(service.getOpenAPISpec().getValue());
-                    OpenApiServiceGenerator oasSvcGenerator = new OpenApiServiceGenerator(contractPath,
-                            project.sourceRoot(), workspaceManager);
-                    return new CommonSourceResponse(oasSvcGenerator.generateService(service,
-                            isDefaultListenerCreationRequired));
+                    OpenApiServiceGenerator oasSvcGenerator = new OpenApiServiceGenerator(
+                            Path.of(service.getOpenAPISpec().getValue()), project.sourceRoot(), workspaceManager);
+                    return new CommonSourceResponse(oasSvcGenerator.generateService(service, createDefaultListener));
                 }
 
                 List<String> importStmts = new ArrayList<>();
@@ -395,27 +392,24 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                     importStmts.add(Utils.getImportStmt(service.getOrgName(), service.getModuleName()));
                 }
 
+                List<TextEdit> edits = new ArrayList<>();
                 if (!importStmts.isEmpty()) {
-                    String imports = String.join(ServiceModelGeneratorConstants.LINE_SEPARATOR, importStmts);
+                    String imports = String.join(NEW_LINE, importStmts);
                     edits.add(new TextEdit(Utils.toRange(lineRange.startLine()), imports));
                 }
 
-                if (isDefaultListenerCreationRequired) {
+                if (createDefaultListener) {
                     List<ImportDeclarationNode> importsList = node.imports().stream().toList();
-                    LinePosition listenerDeclaringLoc;
-                    if (!importsList.isEmpty()) {
-                        listenerDeclaringLoc = importsList.get(importsList.size() - 1).lineRange().endLine();
-                    } else {
-                        listenerDeclaringLoc = lineRange.endLine();
-                    }
-                    String listenerDeclarationStmt = ListenerUtil.getListenerDeclarationStmt(
+                    LinePosition listenerDeclaringLoc = importsList.isEmpty() ? lineRange.endLine() :
+                            importsList.getLast().lineRange().endLine();
+                    String listenerDeclarationStmt = ListenerUtil.getHttpDefaultListenerDeclarationStmt(
                             semanticModel.get(), document.get(), listenerDeclaringLoc);
                     edits.add(new TextEdit(Utils.toRange(listenerDeclaringLoc), listenerDeclarationStmt));
                 }
 
                 Utils.FunctionAddContext context = Utils.getTriggerAddContext(service.getOrgName(),
                         service.getPackageName());
-                if (context.equals(Utils.FunctionAddContext.TCP_SERVICE_ADD)) {
+                if (context.equals(TCP_SERVICE_ADD)) {
                     String serviceName = Utils.generateTypeIdentifier(semanticModel.get(), document.get(),
                             lineRange.endLine(), "TcpEchoService");
                     service.getProperties().put("returningServiceClass", Value.getTcpValue(serviceName));
@@ -423,15 +417,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
 
                 updateFunctionList(service);
                 String serviceDeclaration = getServiceDeclarationNode(service, context);
-                edits.add(new TextEdit(Utils.toRange(lineRange.endLine()),
-                        ServiceModelGeneratorConstants.LINE_SEPARATOR + serviceDeclaration));
+                edits.add(new TextEdit(Utils.toRange(lineRange.endLine()), NEW_LINE + serviceDeclaration));
 
-                if (context.equals(Utils.FunctionAddContext.TCP_SERVICE_ADD)) {
+                if (context.equals(TCP_SERVICE_ADD)) {
                     String serviceName = service.getProperties().get("returningServiceClass").getValue();
                     String serviceClass = ServiceClassUtil.getTcpConnectionServiceTemplate().formatted(serviceName);
-                    edits.add(new TextEdit(Utils.toRange(lineRange.endLine()),
-                            ServiceModelGeneratorConstants.LINE_SEPARATOR + serviceClass
-                                    + ServiceModelGeneratorConstants.LINE_SEPARATOR));
+                    edits.add(new TextEdit(Utils.toRange(lineRange.endLine()), serviceClass));
                 }
 
                 return new CommonSourceResponse(Map.of(request.filePath(), edits));
@@ -478,7 +469,7 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
     }
 
     /**
-     * Get the list of text edits to add a resource function to a service.
+     * Get the list of text edits to add a http resource function.
      *
      * @param request Function source request
      * @return {@link CommonSourceResponse} of the common source response
@@ -493,34 +484,22 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (document.isEmpty()) {
                     return new CommonSourceResponse();
                 }
-                SyntaxTree syntaxTree = document.get().syntaxTree();
-                ModulePartNode modulePartNode = syntaxTree.rootNode();
-                TextDocument textDocument = syntaxTree.textDocument();
-                LineRange lineRange = request.codedata().getLineRange();
-                int start = textDocument.textPositionFrom(lineRange.startLine());
-                int end = textDocument.textPositionFrom(lineRange.endLine());
-                NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
+                NonTerminalNode node = findNonTerminalNode(request.codedata(), document.get());
                 if (node.kind() != SyntaxKind.SERVICE_DECLARATION) {
                     return new CommonSourceResponse();
                 }
                 ServiceDeclarationNode serviceNode = (ServiceDeclarationNode) node;
-                List<String> statusCodeResponses = new ArrayList<>();
-                String functionDefinition = ServiceModelGeneratorConstants.LINE_SEPARATOR +
-                        "\t" + getFunction(request.function(), statusCodeResponses, Utils.FunctionBodyKind.DO_BLOCK,
-                        Utils.FunctionAddContext.RESOURCE_ADD)
-                        .replace(ServiceModelGeneratorConstants.LINE_SEPARATOR,
-                                ServiceModelGeneratorConstants.LINE_SEPARATOR + "\t")
-                        + ServiceModelGeneratorConstants.LINE_SEPARATOR;
+                List<String> newStatusCodeTypesDef = new ArrayList<>();
+                String functionDefinition = NEW_LINE_WITH_TAB + getFunction(request.function(), newStatusCodeTypesDef,
+                        DO_BLOCK, RESOURCE_ADD).replace(NEW_LINE, NEW_LINE_WITH_TAB) + NEW_LINE;
 
                 List<TextEdit> textEdits = new ArrayList<>();
                 LineRange serviceEnd = serviceNode.closeBraceToken().lineRange();
                 textEdits.add(new TextEdit(Utils.toRange(serviceEnd.startLine()), functionDefinition));
-                String statusCodeResEdits = statusCodeResponses.stream()
-                        .collect(Collectors.joining(ServiceModelGeneratorConstants.LINE_SEPARATOR
-                                + ServiceModelGeneratorConstants.LINE_SEPARATOR));
-                if (!statusCodeResEdits.isEmpty()) {
+                if (!newStatusCodeTypesDef.isEmpty()) {
+                    String statusCodeResEdits = String.join(TWO_NEW_LINES, newStatusCodeTypesDef);
                     textEdits.add(new TextEdit(Utils.toRange(serviceEnd.endLine()),
-                            ServiceModelGeneratorConstants.LINE_SEPARATOR + statusCodeResEdits));
+                            NEW_LINE + statusCodeResEdits));
                 }
                 return new CommonSourceResponse(Map.of(request.filePath(), textEdits));
             } catch (Exception e) {
@@ -539,32 +518,27 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
     public CompletableFuture<ServiceFromSourceResponse> getServiceFromSource(CommonModelFromSourceRequest request) {
         return CompletableFuture.supplyAsync(() -> {
             Path filePath = Path.of(request.filePath());
-            Optional<SemanticModel> semanticModel;
+            Optional<SemanticModel> semanticModelOp;
             Optional<Document> document;
             Project project;
             try {
                 project = this.workspaceManager.loadProject(filePath);
-                semanticModel = this.workspaceManager.semanticModel(filePath);
+                semanticModelOp = this.workspaceManager.semanticModel(filePath);
                 document = this.workspaceManager.document(filePath);
             } catch (Exception e) {
                 return new ServiceFromSourceResponse(e);
             }
 
-            if (Objects.isNull(project) || document.isEmpty() || semanticModel.isEmpty()) {
+            if (Objects.isNull(project) || document.isEmpty() || semanticModelOp.isEmpty()) {
                 return new ServiceFromSourceResponse();
             }
-            SyntaxTree syntaxTree = document.get().syntaxTree();
-            ModulePartNode modulePartNode = syntaxTree.rootNode();
-            TextDocument textDocument = syntaxTree.textDocument();
-            LineRange lineRange = request.codedata().getLineRange();
-            int start = textDocument.textPositionFrom(lineRange.startLine());
-            int end = textDocument.textPositionFrom(lineRange.endLine());
-            NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
+            NonTerminalNode node = findNonTerminalNode(request.codedata(), document.get());
             if (node.kind() != SyntaxKind.SERVICE_DECLARATION) {
                 return new ServiceFromSourceResponse();
             }
             ServiceDeclarationNode serviceNode = (ServiceDeclarationNode) node;
-            ModuleAndServiceType moduleAndServiceType = deriveServiceType(serviceNode, semanticModel.get());
+            SemanticModel semanticModel = semanticModelOp.get();
+            ModuleAndServiceType moduleAndServiceType = deriveServiceType(serviceNode, semanticModel);
             if (Objects.isNull(moduleAndServiceType.moduleName())) {
                 return new ServiceFromSourceResponse();
             }
@@ -576,34 +550,35 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 }
                 Service serviceModel = service.get();
                 serviceModel.setFunctions(new ArrayList<>());
-                Optional<TypeDescriptorNode> serviceTypeDesc = serviceNode.typeDescriptor();
-                if (serviceTypeDesc.isPresent() && isHttpServiceContractType(semanticModel.get(),
-                        serviceTypeDesc.get())) {
-                    String serviceContractName = serviceTypeDesc.get().toString().trim();
-                    Path contractPath = project.sourceRoot().toAbsolutePath()
-                            .resolve(String.format("service_contract_%s.bal", serviceContractName));
-                    Optional<Document> contractDoc = this.workspaceManager.document(contractPath);
-                    if (contractDoc.isEmpty()) {
-                        updateServiceModel(serviceModel, serviceNode, semanticModel.get());
-                    } else {
-                        SyntaxTree contractSyntaxTree = contractDoc.get().syntaxTree();
-                        ModulePartNode contractModulePartNode = contractSyntaxTree.rootNode();
-                        Optional<TypeDefinitionNode> serviceContractType = contractModulePartNode.members().stream()
-                                .filter(member -> member.kind().equals(SyntaxKind.TYPE_DEFINITION))
-                                .map(member -> ((TypeDefinitionNode) member))
-                                .filter(member -> member.typeDescriptor().kind().equals(SyntaxKind.OBJECT_TYPE_DESC))
-                                .findFirst();
-                        if (serviceContractType.isEmpty()) {
-                            updateServiceModel(serviceModel, serviceNode, semanticModel.get());
-                        } else {
-                            updateServiceContractModel(serviceModel, serviceContractType.get(), serviceNode,
-                                    semanticModel.get());
+                boolean serviceContractExists = false;
+                if (serviceNode.typeDescriptor().isPresent()) {
+                    Optional<Symbol> httpServiceContractSym = getHttpServiceContractSym(semanticModel,
+                            serviceNode.typeDescriptor().get());
+                    if (httpServiceContractSym.isPresent() && httpServiceContractSym.get().getLocation().isPresent()) {
+                        Path contractPath = project.sourceRoot().toAbsolutePath()
+                                .resolve(httpServiceContractSym.get().getLocation().get().lineRange().fileName());
+                        Optional<Document> contractDoc = this.workspaceManager.document(contractPath);
+                        if (contractDoc.isPresent()) {
+                            ModulePartNode contractModulePartNode = contractDoc.get().syntaxTree().rootNode();
+                            Optional<TypeDefinitionNode> serviceContractType = contractModulePartNode.members().stream()
+                                    .filter(member -> member.kind().equals(SyntaxKind.TYPE_DEFINITION))
+                                    .map(member -> ((TypeDefinitionNode) member))
+                                    .filter(member -> member.typeDescriptor().kind().equals(OBJECT_TYPE_DESC))
+                                    .findFirst();
+                            if (serviceContractType.isPresent()) {
+                                serviceContractExists = true;
+                                updateServiceContractModel(serviceModel, serviceContractType.get(), serviceNode,
+                                        semanticModel);
+                            }
                         }
                     }
-                } else {
-                    updateServiceModel(serviceModel, serviceNode, semanticModel.get());
                 }
-                updateListenerItems(moduleName, semanticModel.get(), project, serviceModel);
+
+                if (!serviceContractExists) {
+                    updateHttpServiceModel(serviceModel, serviceNode, semanticModel);
+                }
+
+                updateListenerItems(moduleName, semanticModel, project, serviceModel);
                 return new ServiceFromSourceResponse(serviceModel);
             }
             String serviceType = serviceTypeWithoutPrefix(moduleAndServiceType);
@@ -612,8 +587,8 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 return new ServiceFromSourceResponse();
             }
             Service serviceModel = service.get();
-            updateGenericServiceModel(serviceModel, serviceNode, semanticModel.get());
-            updateListenerItems(moduleName, semanticModel.get(), project, serviceModel);
+            updateGenericServiceModel(serviceModel, serviceNode, semanticModel);
+            updateListenerItems(moduleName, semanticModel, project, serviceModel);
             return new ServiceFromSourceResponse(serviceModel);
         });
     }
@@ -647,32 +622,15 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (document.isEmpty()) {
                     return new ListenerFromSourceResponse();
                 }
-                SyntaxTree syntaxTree = document.get().syntaxTree();
-                ModulePartNode modulePartNode = syntaxTree.rootNode();
-                TextDocument textDocument = syntaxTree.textDocument();
-                LineRange lineRange = request.codedata().getLineRange();
-                int start = textDocument.textPositionFrom(lineRange.startLine());
-                int end = textDocument.textPositionFrom(lineRange.endLine());
-                NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
-                if (node.kind() != SyntaxKind.LISTENER_DECLARATION) {
+                NonTerminalNode node = findNonTerminalNode(request.codedata(), document.get());
+                if (!(node instanceof ListenerDeclarationNode listenerNode)) {
                     return new ListenerFromSourceResponse();
                 }
-                ListenerDeclarationNode listenerNode = (ListenerDeclarationNode) node;
-                Optional<Listener> listenerModelOp;
-                if (ListenerUtil.isHttpDefaultListener(listenerNode)) {
-                    listenerModelOp = ListenerUtil.getDefaultListenerModel();
-                } else {
-                    listenerModelOp = ListenerUtil.getListenerFromSource(listenerNode, semanticModel);
-                }
+                Optional<Listener> listenerModelOp = ListenerUtil.getListenerFromSource(listenerNode, semanticModel);
                 if (listenerModelOp.isEmpty()) {
                     return new ListenerFromSourceResponse();
                 }
                 Listener listenerModel = listenerModelOp.get();
-                Value nameProperty = listenerModel.getProperty("name");
-                nameProperty.setValue(listenerNode.variableName().text().trim());
-                nameProperty.setCodedata(new Codedata(listenerNode.variableName().lineRange()));
-                nameProperty.setEditable(false);
-                listenerModel.setCodedata(new Codedata(listenerNode.lineRange()));
                 return new ListenerFromSourceResponse(listenerModel);
             } catch (Exception e) {
                 return new ListenerFromSourceResponse(e);
@@ -718,15 +676,8 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (document.isEmpty()) {
                     return new CommonSourceResponse();
                 }
-                SyntaxTree syntaxTree = document.get().syntaxTree();
-                ModulePartNode modulePartNode = syntaxTree.rootNode();
-                TextDocument textDocument = syntaxTree.textDocument();
-                LineRange lineRange = request.codedata().getLineRange();
-                int start = textDocument.textPositionFrom(lineRange.startLine());
-                int end = textDocument.textPositionFrom(lineRange.endLine());
-                NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
-                if (!(node.kind().equals(SyntaxKind.SERVICE_DECLARATION) ||
-                        node.kind().equals(SyntaxKind.CLASS_DEFINITION))) {
+                NonTerminalNode node = findNonTerminalNode(request.codedata(), document.get());
+                if (!(node instanceof ServiceDeclarationNode || node instanceof ClassDefinitionNode)) {
                     return new CommonSourceResponse();
                 }
                 LineRange functionLineRange;
@@ -743,11 +694,8 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (!members.isEmpty()) {
                     functionLineRange = members.get(members.size() - 1).lineRange();
                 }
-                String functionNode = ServiceModelGeneratorConstants.LINE_SEPARATOR + "\t"
-                        + getFunction(request.function(), new ArrayList<>(), Utils.FunctionBodyKind.DO_BLOCK,
-                        Utils.FunctionAddContext.FUNCTION_ADD)
-                        .replace(ServiceModelGeneratorConstants.LINE_SEPARATOR,
-                                ServiceModelGeneratorConstants.LINE_SEPARATOR + "\t");
+                String functionNode = NEW_LINE_WITH_TAB + getFunction(request.function(), List.of(), DO_BLOCK,
+                        Utils.FunctionAddContext.FUNCTION_ADD).replace(NEW_LINE, NEW_LINE_WITH_TAB);
                 edits.add(new TextEdit(Utils.toRange(functionLineRange.endLine()), functionNode));
                 return new CommonSourceResponse(Map.of(request.filePath(), edits));
             } catch (Throwable e) {
@@ -766,71 +714,58 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
     public CompletableFuture<CommonSourceResponse> updateFunction(FunctionModifierRequest request) {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                List<TextEdit> edits = new ArrayList<>();
                 Path filePath = Path.of(request.filePath());
                 this.workspaceManager.loadProject(filePath);
                 Optional<Document> document = this.workspaceManager.document(filePath);
                 if (document.isEmpty()) {
                     return new CommonSourceResponse();
                 }
-                SyntaxTree syntaxTree = document.get().syntaxTree();
-                ModulePartNode modulePartNode = syntaxTree.rootNode();
-                TextDocument textDocument = syntaxTree.textDocument();
                 Function function = request.function();
                 LineRange lineRange = function.getCodedata().getLineRange();
-                int start = textDocument.textPositionFrom(lineRange.startLine());
-                int end = textDocument.textPositionFrom(lineRange.endLine());
-                NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
+                NonTerminalNode node = findNonTerminalNode(function.getCodedata(), document.get());
                 if (!(node instanceof FunctionDefinitionNode functionDefinitionNode)) {
                     return new CommonSourceResponse();
                 }
-                NonTerminalNode parentService = functionDefinitionNode.parent();
-                if (!(parentService.kind().equals(SyntaxKind.SERVICE_DECLARATION) ||
-                        parentService.kind().equals(SyntaxKind.CLASS_DEFINITION))) {
+                NonTerminalNode parentNode = functionDefinitionNode.parent();
+                if (!(parentNode instanceof ServiceDeclarationNode || parentNode instanceof ClassDefinitionNode)) {
                     return new CommonSourceResponse();
                 }
+                List<TextEdit> edits = new ArrayList<>();
+                Utils.addFunctionAnnotationTextEdits(function, functionDefinitionNode, edits);
 
                 String functionName = functionDefinitionNode.functionName().text().trim();
                 LineRange nameRange = functionDefinitionNode.functionName().lineRange();
                 String functionKind = function.getKind();
-                boolean isRemoteFunction = functionKind.equals(ServiceModelGeneratorConstants.KIND_REMOTE)
-                        || functionKind.equals(ServiceModelGeneratorConstants.KIND_MUTATION);
-                if (isRemoteFunction && !functionName.equals(function.getName().getValue())) {
-                    edits.add(new TextEdit(Utils.toRange(nameRange), function.getName().getValue()));
-                } else {
-                    if (!isRemoteFunction && !functionName.equals(function.getAccessor().getValue())) {
-                        edits.add(new TextEdit(Utils.toRange(nameRange), function.getAccessor().getValue()));
-                    }
+                boolean isRemote = functionKind.equals(KIND_REMOTE) || functionKind.equals(KIND_MUTATION);
+                String newFunctionName = function.getName().getValue();
+                if (isRemote && !functionName.equals(newFunctionName)) {
+                    edits.add(new TextEdit(Utils.toRange(nameRange), newFunctionName));
                 }
 
-                if (!isRemoteFunction) {
+                if (!isRemote) {
+                    if (!functionName.equals(function.getAccessor().getValue())) {
+                        edits.add(new TextEdit(Utils.toRange(nameRange), function.getAccessor().getValue()));
+                    }
+
                     NodeList<Node> path = functionDefinitionNode.relativeResourcePath();
-                    if (Objects.nonNull(path) && !function.getName().getValue().equals(getPath(path))) {
+                    if (Objects.nonNull(path) && !newFunctionName.equals(getPath(path))) {
                         LinePosition startPos = path.get(0).lineRange().startLine();
                         LinePosition endPos = path.get(path.size() - 1).lineRange().endLine();
                         LineRange pathLineRange = LineRange.from(lineRange.fileName(), startPos, endPos);
-                        TextEdit pathEdit = new TextEdit(Utils.toRange(pathLineRange),
-                                function.getName().getValue());
+                        TextEdit pathEdit = new TextEdit(Utils.toRange(pathLineRange), newFunctionName);
                         edits.add(pathEdit);
                     }
                 }
 
                 LineRange signatureRange = functionDefinitionNode.functionSignature().lineRange();
-                List<String> statusCodeResponses = new ArrayList<>();
-                String functionSignature = getFunctionSignature(function, statusCodeResponses, false);
+                List<String> newStatusCodeTypesDef = new ArrayList<>();
+                String functionSignature = getFunctionSignature(function, newStatusCodeTypesDef, false);
                 edits.add(new TextEdit(Utils.toRange(signatureRange), functionSignature));
-                String statusCodeResEdits = statusCodeResponses.stream()
-                        .collect(Collectors.joining(ServiceModelGeneratorConstants.LINE_SEPARATOR
-                                + ServiceModelGeneratorConstants.LINE_SEPARATOR));
 
-                if (parentService.kind().equals(SyntaxKind.SERVICE_DECLARATION)) {
-                    ServiceDeclarationNode serviceDeclarationNode = (ServiceDeclarationNode) parentService;
-                    LineRange serviceEnd = serviceDeclarationNode.closeBraceToken().lineRange();
-
-                    if (!statusCodeResEdits.isEmpty()) {
-                        edits.add(new TextEdit(Utils.toRange(serviceEnd.endLine()),
-                                ServiceModelGeneratorConstants.LINE_SEPARATOR + statusCodeResEdits));
-                    }
+                if (!newStatusCodeTypesDef.isEmpty() && parentNode instanceof ServiceDeclarationNode serviceNode) {
+                    String statusCodeResEdits = String.join(TWO_NEW_LINES, newStatusCodeTypesDef);
+                    edits.add(new TextEdit(Utils.toRange(serviceNode.closeBraceToken().lineRange().endLine()),
+                            NEW_LINE + statusCodeResEdits));
                 }
 
                 return new CommonSourceResponse(Map.of(request.filePath(), edits));
@@ -856,22 +791,17 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 this.workspaceManager.loadProject(filePath);
                 Optional<Document> document = this.workspaceManager.document(filePath);
                 Optional<SemanticModel> semanticModel = this.workspaceManager.semanticModel(filePath);
-                if (document.isEmpty()) {
+                if (document.isEmpty() || semanticModel.isEmpty()) {
                     return new CommonSourceResponse();
                 }
-                SyntaxTree syntaxTree = document.get().syntaxTree();
-                ModulePartNode modulePartNode = syntaxTree.rootNode();
-                TextDocument textDocument = syntaxTree.textDocument();
+                ModulePartNode modulePartNode = document.get().syntaxTree().rootNode();
                 LineRange lineRange = service.getCodedata().getLineRange();
-                int start = textDocument.textPositionFrom(lineRange.startLine());
-                int end = textDocument.textPositionFrom(lineRange.endLine());
-                NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
+                NonTerminalNode node = findNonTerminalNode(service.getCodedata(), document.get());
                 if (node.kind() != SyntaxKind.SERVICE_DECLARATION) {
                     return new CommonSourceResponse();
                 }
 
                 ServiceDeclarationNode serviceNode = (ServiceDeclarationNode) node;
-
                 addServiceAnnotationTextEdits(service, serviceNode, edits);
 
                 Value basePathValue = service.getBasePath();
@@ -903,10 +833,9 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 }
 
                 Value listener = service.getListener();
-                boolean isDefaultListenerCreationRequired = false;
+                boolean createDefaultListener = false;
                 if (Objects.nonNull(listener) && listener.isEnabledWithValue()) {
-                    isDefaultListenerCreationRequired = ListenerUtil
-                            .checkForDefaultListenerExistence(service.getListener());
+                    createDefaultListener = ListenerUtil.createDefaultListener(service.getListener());
 
                     String listenerName = listener.getValue();
                     Optional<ExpressionNode> listenerExpression = getListenerExpression(serviceNode);
@@ -917,15 +846,11 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                     }
                 }
 
-                if (isDefaultListenerCreationRequired) {
+                if (createDefaultListener) {
                     List<ImportDeclarationNode> importsList = modulePartNode.imports().stream().toList();
-                    LinePosition listenerDeclaringLoc;
-                    if (!importsList.isEmpty()) {
-                        listenerDeclaringLoc = importsList.get(importsList.size() - 1).lineRange().endLine();
-                    } else {
-                        listenerDeclaringLoc = lineRange.endLine();
-                    }
-                    String listenerDeclarationStmt = ListenerUtil.getListenerDeclarationStmt(
+                    LinePosition listenerDeclaringLoc = importsList.isEmpty() ? lineRange.endLine() :
+                            importsList.getLast().lineRange().endLine();
+                    String listenerDeclarationStmt = ListenerUtil.getHttpDefaultListenerDeclarationStmt(
                             semanticModel.get(), document.get(), listenerDeclaringLoc);
                     edits.add(new TextEdit(Utils.toRange(listenerDeclaringLoc), listenerDeclarationStmt));
                 }
@@ -955,13 +880,8 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (document.isEmpty()) {
                     return new CommonSourceResponse();
                 }
-                SyntaxTree syntaxTree = document.get().syntaxTree();
-                ModulePartNode modulePartNode = syntaxTree.rootNode();
-                TextDocument textDocument = syntaxTree.textDocument();
                 LineRange lineRange = listener.getCodedata().getLineRange();
-                int start = textDocument.textPositionFrom(lineRange.startLine());
-                int end = textDocument.textPositionFrom(lineRange.endLine());
-                NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
+                NonTerminalNode node = findNonTerminalNode(listener.getCodedata(), document.get());
                 if (node.kind() != SyntaxKind.LISTENER_DECLARATION) {
                     return new CommonSourceResponse();
                 }
@@ -996,19 +916,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (document.isEmpty()) {
                     return new ServiceClassModelResponse();
                 }
-                SyntaxTree syntaxTree = document.get().syntaxTree();
-                ModulePartNode modulePartNode = syntaxTree.rootNode();
-                TextDocument textDocument = syntaxTree.textDocument();
-                LineRange lineRange = request.codedata().getLineRange();
-                int start = textDocument.textPositionFrom(lineRange.startLine());
-                int end = textDocument.textPositionFrom(lineRange.endLine());
-                NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
-                if (node.kind() != SyntaxKind.CLASS_DEFINITION) {
+                NonTerminalNode node = findNonTerminalNode(request.codedata(), document.get());
+                if (!(node instanceof ClassDefinitionNode classDefinitionNode)) {
                     return new ServiceClassModelResponse();
                 }
                 ServiceClassUtil.ServiceClassContext context = ServiceClassUtil.ServiceClassContext
                         .valueOf(request.context());
-                ClassDefinitionNode classDefinitionNode = (ClassDefinitionNode) node;
                 ServiceClass serviceClass = ServiceClassUtil.getServiceClass(classDefinitionNode, context);
                 return new ServiceClassModelResponse(serviceClass);
             } catch (Throwable e) {
@@ -1061,7 +974,7 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
 
 
     /**
-     * Get the list of text edits to add a function skeleton to the given service.
+     * Add an attribute to the given class or service.
      *
      * @param request Function source request
      * @return {@link CommonSourceResponse} of the common source response
@@ -1084,8 +997,7 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 int start = textDocument.textPositionFrom(lineRange.startLine());
                 int end = textDocument.textPositionFrom(lineRange.endLine());
                 NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
-                if (!(node.kind().equals(SyntaxKind.SERVICE_DECLARATION) ||
-                        node.kind().equals(SyntaxKind.CLASS_DEFINITION))) {
+                if (!(node instanceof ClassDefinitionNode || node instanceof ServiceDeclarationNode)) {
                     return new CommonSourceResponse();
                 }
                 LineRange functionLineRange;
@@ -1096,8 +1008,7 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                     functionLineRange = classDefinitionNode.openBrace().lineRange();
                 }
 
-                String functionNode = ServiceModelGeneratorConstants.LINE_SEPARATOR + "\t"
-                        + ServiceClassUtil.buildObjectFiledString(request.field());
+                String functionNode = NEW_LINE_WITH_TAB + ServiceClassUtil.buildObjectFiledString(request.field());
                 edits.add(new TextEdit(Utils.toRange(functionLineRange.endLine()), functionNode));
                 return new CommonSourceResponse(Map.of(request.filePath(), edits));
             } catch (Throwable e) {
@@ -1107,7 +1018,7 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
     }
 
     /**
-     * Get the list of text edits to add a class field to the given class.
+     * Add an attribute of a class or a service.
      *
      * @param request Class field source request
      * @return {@link CommonSourceResponse} of the common source response
@@ -1123,13 +1034,8 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (document.isEmpty()) {
                     return new CommonSourceResponse();
                 }
-                SyntaxTree syntaxTree = document.get().syntaxTree();
-                ModulePartNode modulePartNode = syntaxTree.rootNode();
-                TextDocument textDocument = syntaxTree.textDocument();
                 LineRange lineRange = request.field().codedata().getLineRange();
-                int start = textDocument.textPositionFrom(lineRange.startLine());
-                int end = textDocument.textPositionFrom(lineRange.endLine());
-                NonTerminalNode node = modulePartNode.findNode(TextRange.from(start, end - start), true);
+                NonTerminalNode node = findNonTerminalNode(request.field().codedata(), document.get());
                 if (!(node instanceof ObjectFieldNode)) {
                     return new CommonSourceResponse();
                 }
@@ -1189,7 +1095,7 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
 
     private Optional<TriggerBasicInfo> getTriggerBasicInfoByName(String name) {
         Optional<ServiceDeclaration> serviceDeclaration = ServiceDatabaseManager.getInstance()
-                .getServiceDeclaration(name);
+                .getServiceDeclaration(name); // TODO: improve this to use a single query
 
         if (serviceDeclaration.isEmpty()) {
             return Optional.empty();
@@ -1205,5 +1111,15 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 protocol, icon);
 
         return Optional.of(triggerBasicInfo);
+    }
+
+    private static NonTerminalNode findNonTerminalNode(Codedata codedata, Document document) {
+        SyntaxTree syntaxTree = document.syntaxTree();
+        ModulePartNode modulePartNode = syntaxTree.rootNode();
+        TextDocument textDocument = syntaxTree.textDocument();
+        LineRange lineRange = codedata.getLineRange();
+        int start = textDocument.textPositionFrom(lineRange.startLine());
+        int end = textDocument.textPositionFrom(lineRange.endLine());
+        return modulePartNode.findNode(TextRange.from(start, end - start), true);
     }
 }
